--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     image: postgres:14.3
     restart: always
     ports:
-      - "5455:5455"
+      - "5436:5432"
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-    container_name: prontoPaga
+    container_name: prontoPagaContainer
     volumes:
       - ./postgres:/var/lib/postgresql/data
